# BlockSmith

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PLAN_IMAGE_HANDLING.md  PLAN_JSONL_VIEWER.md  PLAN_SPLITVIEW_WEBENGINE_MERMAID.md  README.md  build_msvc.bat  todos.md
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: DESIGN_scroll_sync.md  DESIGN_zoom.md  PLAN_EXPORT.md  PLAN_UPDATE_FROM_GITHUB_RELEASE.md  README.md  ROADMAP.md  architecture.md  bugs.md  code-audit.md  todos.md  user-manual.md
docs/architecture/: component-map.md  overview.md  runtime-flows.md  storage.md
docs/archive/: README.md  multi-tab-buglist.md  multi-tab-plan.md  phase-12-completion.md
docs/reference/: format-matrix.md
docs/roadmap/: backlog.md  now-next-later.md
docs/user/: quickstart.md  shortcuts.md  workflows.md
qml/: Main.qml
qml/components/: AddBlockDialog.qml  BlockCard.qml  BlockDiffPopup.qml  BlockEditorPopup.qml  BlockListPanel.qml  DocxViewer.qml  Editor.qml  EditorContextMenu.qml  EditorHeader.qml  EditorPopupBase.qml  EditorStatusBar.qml  EditorTabBar.qml  ExportDialog.qml  FileChangedBanner.qml  FileOperationDialog.qml  FindReplaceBar.qml  FindReplaceController.qml  ImageDropZone.qml  JsonToolbar.qml  JsonlEntryCard.qml  JsonlFilterBar.qml  JsonlViewer.qml  LineNumberGutter.qml  MainContent.qml  MdEditor.qml  MdPreview.qml  MdPreviewWeb.qml  MdToolbar.qml  NavContextMenu.qml  NavFooterBar.qml  NavPanel.qml  NewProjectDialog.qml  OutlinePanel.qml  PdfViewer.qml  PromptCard.qml  PromptEditorPopup.qml  PromptListPanel.qml  QuickSwitcher.qml  QuitConfirmDialog.qml  RightPane.qml  (+11 more)
resources/: blocksmith.rc
resources/preview/: index.html
src/: appcontroller.cpp  appcontroller.h  blockstore.cpp  blockstore.h  configmanager.cpp  configmanager.h  document.cpp  document.h  exportmanager.cpp  exportmanager.h  filemanager.cpp  filemanager.h  imagehandler.cpp  imagehandler.h  jsonlstore.cpp  jsonlstore.h  main.cpp  md4crenderer.cpp  md4crenderer.h  mddocument.cpp  mddocument.h  mdsyntaxhighlighter.cpp  mdsyntaxhighlighter.h  navigationmanager.cpp  navigationmanager.h  projectscanner.cpp  projectscanner.h  projecttreemodel.cpp  projecttreemodel.h  promptstore.cpp  promptstore.h  scrollbridge.cpp  scrollbridge.h  searchmanager.cpp  searchmanager.h  syncengine.cpp  syncengine.h  syntaxhighlighter.cpp  syntaxhighlighter.h  tabmodel.cpp  (+3 more)
tools/: fix_block_crlf.py
